--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.2"
+  },
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "standard": "^16.0.4"
   },
   "engines": {
@@ -22,8 +28,5 @@
     "env": [
       "jest"
     ]
-  },
-  "dependencies": {
-    "axios": "^0.27.2"
   }
 }
